# feature-extraction-server

./: .gitignore  Dockerfile  README.md  app.py  build_docker.sh  dev_requirements.txt  dev_server.py  docker_test.sh  entrypoint.sh  environment.yml  extract_dev_requirements.py  gunicorn.conf.py  openapi_spec.json  requirements.txt  run_dev_server.py  setup_dev_server.sh  tasks.py  test-client.py  utils.py
feature_extraction_server-core/: install_system_dependencies.sh  pyproject.toml
feature_extraction_server-core/feature_extraction_server/consumers/: single_thread_consumer.py
feature_extraction_server-core/feature_extraction_server/core/: application_interface.py  consumer.py  dataformat.py  datamodel.py  exceptions.py  execution_state.py  job.py  log_server.py  model.py  namespace.py  plugin.py  plugin_module.py  plugin_namespace.py  settings.py  startable_model.py  task.py  utils.py
feature_extraction_server-core/feature_extraction_server/core/builders/: __init__.py  consumer_builder.py  job_builder.py  model_builder.py  startable_model_builder.py  task_builder.py
feature_extraction_server-core/feature_extraction_server/core/components/: __init__.py  application_interface_component.py  component.py  consumer_builder_component.py  execution_state_component.py  job_builder_component.py  log_server_component.py  model_builder_component.py  namespace_components.py  settings_manager_component.py  startable_model_builder_component.py  task_builder_component.py
feature_extraction_server-core/feature_extraction_server/flask/: entrypoint.py  flask_api.py  flask_app_component.py
feature_extraction_server-core/feature_extraction_server/old_services/: consumer_builder_service.py  execution_state_service.py  extraction_backend_service.py  job_builder_service.py  locator_service.py  log_server_service.py  model_builder_service.py  namespace_service.py  settings_manager_service.py  startable_model_builder_service.py  task_builder_service.py
feature_extraction_server-core/feature_extraction_server/services/: execution_state.py  extraction_backend.py  job_builder.py  model_builder.py  task_builder.py  task_namespace.py
plugins/automated_speech_recognition/: pyproject.toml
plugins/conditional_image_captioning/: pyproject.toml
plugins/face_embedding/: pyproject.toml
plugins/face_embedding/feature_extraction_server/tasks/: face_embedding.py
plugins/fastapi/: pyproject.toml
plugins/fastapi/feature_extraction_server/services/: fast_api_app.py
plugins/feature_extraction_server-models-blip/: pyproject.toml
plugins/feature_extraction_server-models-blip/feature_extraction_server/models/: blip.py
plugins/feature_extraction_server-models-clip_vit_large_patch14/: pyproject.toml
plugins/feature_extraction_server-models-clip_vit_large_patch14/feature_extraction_server/models/: clip_vit_large_patch14.py
plugins/feature_extraction_server-models-detr_resnet101/: pyproject.toml
plugins/feature_extraction_server-models-detr_resnet101/feature_extraction_server/models/: detr_resnet101.py
plugins/feature_extraction_server-models-easy_ocr/: pyproject.toml
plugins/feature_extraction_server-models-easy_ocr/feature_extraction_server/models/: easy_ocr.py
plugins/feature_extraction_server-models-easyocr/: pyproject.toml
plugins/feature_extraction_server-models-easyocr/feature_extraction_server/models/: easyocr.py
plugins/feature_extraction_server-models-face_recognition/: pyproject.toml
plugins/feature_extraction_server-models-face_recognition/feature_extraction_server/models/: face_recognition.py
plugins/feature_extraction_server-models-owlvit_base_patch32/: pyproject.toml
plugins/feature_extraction_server-models-owlvit_base_patch32/feature_extraction_server/models/: owlvit_base_patch32.py
plugins/feature_extraction_server-models-vit_gpt2/: pyproject.toml
plugins/feature_extraction_server-models-vit_gpt2/feature_extraction_server/models/: vit_gpt2.py
plugins/feature_extraction_server-services-apiflask/: pyproject.toml
plugins/feature_extraction_server-services-apiflask/feature_extraction_server/services/: flask_app.py
plugins/feature_extraction_server-services-default_models_api/: pyproject.toml
plugins/feature_extraction_server-services-default_models_api/feature_extraction_server/services/: default_models_api.py  default_models_service.py
plugins/feature_extraction_server-tasks-audio_diarization/: pyproject.toml
plugins/feature_extraction_server-tasks-audio_diarization/feature_extraction_server/tasks/: audio_diarization.py
plugins/feature_extraction_server-tasks-image_captioning/: pyproject.toml
plugins/feature_extraction_server-tasks-image_captioning/feature_extraction_server/tasks/: image_captioning.py
plugins/feature_extraction_server-tasks-object_detection/: pyproject.toml
plugins/feature_extraction_server-tasks-object_detection/feature_extraction_server/tasks/: object_detection.py
plugins/feature_extraction_server-tasks-optical_character_recognition/: pyproject.toml
plugins/feature_extraction_server-tasks-optical_character_recognition/feature_extraction_server/tasks/: optical_character_recognition.py
plugins/feature_extraction_server-tasks-zero_shot_image_classification/: pyproject.toml
plugins/feature_extraction_server-tasks-zero_shot_image_classification/feature_extraction_server/tasks/: zero_shot_image_classification.py
plugins/image_embedding/: pyproject.toml
plugins/whisper/: pyproject.toml
plugins/whisper/feature_extraction_server/models/: whisper.py
src/blip2/: README.md  pyproject.toml
src/blip2/feature_extraction_server/models/: blip2.py
src/chat_completion/: README.md  pyproject.toml
src/chat_completion/feature_extraction_server/tasks/: chat_completion.py
src/clip_vit_large_patch14/: README.md  pyproject.toml
src/detr_resnet101/: README.md  pyproject.toml
src/dino_v2_vits14/: README.md  pyproject.toml
src/e5mistral7b_instruct/: README.md  pyproject.toml
src/easy_ocr/: README.md  pyproject.toml
src/gpt4o/: README.md  pyproject.toml
src/gpt4o/feature_extraction_server/models/: gpt4o.py
(+154 files in other folders)
