[project]
name = "feature_extraction_server-core"
version = "0.1.0"
description = "Simple server for extracting features."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "psutil>=5.9.5",
    "soundfile>=0.12.1",
    "pillow>=9.5.0",
    "flask>=2.3.2",
    "python-decouple>=3.8",
    "tabulate>=0.9.0",
    "opencv-python"
]

[tool.flit.module]
name = "feature_extraction_server"

[project.optional-dependencies]
dev = [
    "pytest>=6.2"
]

[build]
script = "flit build"
