[project]
name = "feature_extraction_server-tasks-automated_speech_recognition"
version = "0.1.0"
description = "Automated Speech Recognition Task for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
]

[tool.flit.module]
name = "feature_extraction_server.tasks.automated_speech_recognition"

[build]
script = "flit build"
