[project]
name = "feature_extraction_server-services-fastapi"
version = "0.1.0"
description = "Fast API for the FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn"
]

[tool.flit.module]
name = "feature_extraction_server.services.fast_api_app"

[build]
script = "flit build"
