[project]
name = "feature_extraction_server-models-owlvit_base_patch32"
version = "0.1.0"
description = "owlvit_base_patch32 model for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "torch",
    "transformers"
]

[tool.flit.module]
name = "feature_extraction_server.models.owlvit_base_patch32"

[build]
script = "flit build"
