[project]
name = "feature_extraction_server-apis-default_models_api"
version = "0.1.0"
description = "Basic API for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

[tool.flit.module]
name = "feature_extraction_server.services.default_models_api"

[build]
script = "flit build"
