[project]
name = "feature_extraction_server-tasks-audio_diarization"
version = "0.1.0"
description = "Audio Diarization Task for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
]

[tool.flit.module]
name = "feature_extraction_server.tasks.audio_diarization"

[build]
script = "flit build"
