[project]
name = "feature_extraction_server-tasks-object_detection"
version = "0.1.0"
description = "Object Detection Task for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
]

[tool.flit.module]
name = "feature_extraction_server.tasks.object_detection"

[build]
script = "flit build"
