[project]
name = "feature_extraction_server-models-whisper"
version = "0.1.0"
description = "whisper model for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "openai-whisper",
    "pydub", 
    "numpy"
]

[tool.flit.module]
name = "feature_extraction_server.models.whisper"

[build]
script = "flit build"
