[project]
name = "feature_extraction_server-models-blip2"
version = "0.1.0"
description = "Blip2 model for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "torch==2.0",
    "transformers"
]

[tool.flit.module]
name = "feature_extraction_server.models.blip2"

[build]
script = "flit build"
