[project]
name = "feature_extraction_server-tasks-chat_completion"
version = "0.1.0"
description = "Chat Completion Task for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
]

[tool.flit.module]
name = "feature_extraction_server.tasks.conditional_image_captioning"

[build]
script = "flit build"
