[project]
name = "feature_extraction_server-models-detr_resnet101"
version = "0.1.0"
description = "detr_resnet101 model for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "torch==2.0",
    "transformers==4.41.1"
]

[tool.flit.module]
name = "feature_extraction_server.models.detr_resnet101"

[build]
script = "flit build"
