[project]
name = "feature_extraction_server-models-dino_v2_vits_14"
version = "0.1.0"
description = "DINO v2 for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "torch==2.0",
    "torchvision"
]

[tool.flit.module]
name = "feature_extraction_server.models.dino_v2_vits_14"

[build]
script = "flit build"
