[project]
name = "feature_extraction_server-models-e5mistral7b_instruct"
version = "0.1.0"
description = "CLIP for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "torch==2.0",
    "transformers"
]

[tool.flit.module]
name = "feature_extraction_server.models.e5mistral7b_instruct"

[build]
script = "flit build"
