[project]
name = "feature_extraction_server-models-easy_ocr"
version = "0.1.0"
description = "easyocr model for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "easyocr==1.7.1"
]

[tool.flit.module]
name = "feature_extraction_server.models.easy_ocr"

[build]
script = "flit build"
