[project]
name = "feature_extraction_server-models-gpt4o"
version = "0.1.0"
description = "CLIP for FES."
authors = [
    {name = "Fynn Faber", email = "fynn.f.faber@proton.me"}
]
requires-python = ">=3.11"

dependencies = [
    "langchain==0.2.6",
    "langchain-openai==0.1.14",
    "langchain-community==0.2.6",
    "duckduckgo-search==6.2.7"
]

[tool.flit.module]
name = "feature_extraction_server.models.gpt4o"

[build]
script = "flit build"
